# lzpico

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
static/: index.html
